--- a/src/css/apps/user/appstore/page/installed.css
+++ b/src/css/apps/user/appstore/page/installed.css
@@ -1,3 +1,89 @@
 #AppStore div.page.installed {
   padding: 0 60px;
 }
+
+#AppStore div.page.installed div.updates-banner {
+  width: 100%;
+  /* aspect-ratio: 450 / 180; */
+  min-height: 200px;
+  max-width: 600px;
+  max-height: 250px;
+  overflow: hidden;
+  border-radius: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: end;
+  padding: 20px;
+  position: relative;
+  background-color: var(--win-bg);
+  text-align: left;
+  box-shadow: var(--secondary-box-shadow);
+  border: var(--button-glass-bg) 1px solid;
+  margin-top: 30px;
+}
+
+#AppStore div.page.installed div.updates-banner img.banner {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: 0;
+  filter: blur(20px);
+  opacity: 0.5;
+}
+
+#AppStore div.page.installed div.updates-banner div.icons {
+  display: flex;
+  aspect-ratio: 1/1;
+  height: 160px;
+  width: 160px;
+  min-width: 160px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  position: relative;
+  z-index: 1000;
+}
+
+#AppStore div.page.installed div.updates-banner div.icons img {
+  height: 48px;
+  border-radius: 4px;
+}
+
+#AppStore div.page.installed div.updates-banner div.icons div.icon {
+  width: 75px;
+  height: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--button-glass-bg);
+  border-radius: 10px;
+}
+
+#AppStore div.page.installed div.updates-banner div.cta {
+  margin-right: auto;
+  height: fit-content;
+  position: relative;
+  z-index: 1000;
+}
+
+#AppStore div.page.installed div.updates-banner div.package-install-action {
+  margin-left: 0;
+  justify-content: left;
+}
+
+#AppStore div.page.installed div.updates-banner div.cta h1 {
+  font-size: 22px;
+  margin-bottom: 5px;
+}
+
+#AppStore div.page.installed div.updates-banner div.cta p {
+  margin-bottom: 20px;
+}
+
+#AppStore div.page.installed div.updates-banner div.cta button.lucide {
+  display: none !important;
+}
