--- a/src/css/window/fields.css
+++ b/src/css/window/fields.css
@@ -7,12 +7,12 @@ div.window div.body select {
   padding: 6px 10px;
 }
 
-div.window.glass div.body input,
-div.window.glass div.body select {
-  background-color: var(--win-glass-bg);
+div.window.glass > div.body input,
+div.window.glass > div.body select {
+  background-color: var(--glass-bg);
 }
 
-div.window.glass div.body select.flat {
+div.window.glass > div.body select.flat {
   border: none;
   padding: 0;
   margin: 0;
@@ -21,6 +21,6 @@ div.window.glass div.body select.flat {
   box-shadow: none;
   border-radius: 0;
 }
-div.window.glass div.body select.compact {
+div.window.glass > div.body select.compact {
   padding: 0 5px;
 }
