Add a glowing effect to the secure context

--- a/src/css/apps/components/securecontext/actions.css
+++ b/src/css/apps/components/securecontext/actions.css
@@ -3,7 +3,7 @@
 #SecureContext div.actions {
   display: flex;
   margin-top: auto;
-  border-top: var(--win-border);
+  border-top: var(--button-glass-hover-bg) 1px solid;
   padding: 10px;
   background-color: var(--button-glass-bg);
   margin: 0;
