--- a/src/css/apps/components/securecontext/header.css
+++ b/src/css/apps/components/securecontext/header.css
@@ -5,19 +5,23 @@
   height: 52px;
   padding: 10px;
   font-weight: bold;
-  border-bottom: var(--win-border);
+  border-bottom: var(--button-glass-bg) 1px solid;
+  box-shadow: 0 0 60px 20px rgba(255, 159, 5, 0.5);
 }
 
 #SecureContext > div.body div.header.level-medium {
   background-color: rgba(255, 159, 5, 0.5);
+  box-shadow: 0 0 60px 20px rgba(255, 159, 5, 0.5);
 }
 
 #SecureContext > div.body div.header.level-low {
   background-color: rgba(112, 199, 77, 0.5);
+  box-shadow: 0 0 60px 20px rgba(112, 199, 77, 0.5);
 }
 
 #SecureContext > div.body div.header.level-high {
   background-color: rgba(228, 54, 54, 0.5);
+  box-shadow: 0 0 60px 20px rgba(228, 54, 54, 0.5);
 }
 
 #SecureContext > div.body div.header img {
