--- a/src/css/apps/components/shell/taskbar/openedapps.css
+++ b/src/css/apps/components/shell/taskbar/openedapps.css
@@ -1,9 +1,9 @@
 div.shell div.taskbar div.opened-apps {
-  background-color: var(--button-glass-bg);
+  /* background-color: var(--button-glass-bg); */
   flex-grow: 1;
-  height: 40px;
-  border-radius: 8px;
-  padding: 3px;
+  height: 41px;
+  /* padding: 3px; */
+  border-radius: 10px;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
@@ -21,17 +21,20 @@ div.shell div.taskbar div.opened-apps::-webkit-scrollbar {
   gap: 10px;
   margin: 0;
   padding: 0 10px;
-  height: 34px;
+  height: 40px;
   background-color: var(--button-glass-bg);
   overflow: Hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
   transition: background-color 0.3s, padding 0.3s, width 0.3s, transform 0.3s, scale 0.2s;
-  border-radius: 7px;
+  border-radius: 10px;
+  position: relative;
 }
 
 #arcShell div.shell div.taskbar div.opened-apps button.iconic {
   padding: 5px;
+  width: 40px;
+  justify-content: center;
 }
 
 #arcShell div.shell div.taskbar div.opened-apps button:not(.iconic).closing {
@@ -44,7 +47,7 @@ div.shell div.taskbar div.opened-apps::-webkit-scrollbar {
 }
 
 #arcShell div.shell div.taskbar div.opened-apps button.iconic.closing + button {
-  margin-left: -34px;
+  margin-left: -40px;
   transition: margin-left 0.3s, background-color 0.3s, padding 0.3s, width 0.3s, transform 0.3s, scale 0.2s;
 }
 
@@ -57,14 +60,41 @@ div.shell div.taskbar div.opened-apps::-webkit-scrollbar {
 }
 
 #arcShell div.shell div.taskbar div.opened-apps button + button {
-  margin-left: 3px;
+  margin-left: 5px;
 }
 
 div.shell div.taskbar div.opened-apps button img {
+  width: 24px;
   height: 24px;
+  object-fit: contain;
+}
+
+div.shell div.taskbar div.opened-apps button img.backdrop {
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 50px;
+  height: 50px;
+  z-index: -1;
+  opacity: 0;
+  transition: opacity 0.2s, filter 0.2s;
+  filter: brightness(1.3) blur(7px);
+}
+
+div.shell div.taskbar div.opened-apps button:hover img.backdrop {
+  opacity: 0.4;
+  filter: brightness(0.9) blur(7px);
 }
 
 #arcShell div.shell div.taskbar div.opened-apps button.active,
 #arcShell div.shell div.taskbar button.start-button.active {
   background-color: var(--button-glass-active-bg);
+}
+#arcShell div.shell div.taskbar div.opened-apps button.active {
+  outline: var(--button-glass-bg) 1px solid !important;
+  outline-offset: -1px;
+}
+div.shell div.taskbar div.opened-apps button.active img.backdrop {
+  opacity: 0.5;
+  filter: brightness(1.3) blur(7px);
 }
