--- a/src/css/apps/user/appstore/page/viewstoreitem.css
+++ b/src/css/apps/user/appstore/page/viewstoreitem.css
@@ -118,3 +118,110 @@
   width: 100%;
   margin: 0 auto;
 }
+
+#AppStore div.page.viewStoreItem div.notice {
+  /* max-width: calc(100% - 80px); */
+  margin: 0 40px;
+  justify-self: center;
+  max-width: 820px;
+  margin-bottom: 20px;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  padding: 0 40px;
+  margin: 30px auto;
+  margin-top: 90px;
+  max-width: 820px;
+  height: 340px;
+  position: relative;
+  overflow: hidden;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 25%;
+  height: 100%;
+  background: linear-gradient(to right, var(--win-bg) 0%, var(--win-bg) 30%, transparent 100%);
+  z-index: 10000;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background: linear-gradient(to left, var(--win-bg) 0%, var(--win-bg) 30%, transparent 100%);
+  z-index: 10000;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper div.carriage {
+  width: 600px;
+  height: 340px;
+  position: relative;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper div.inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: fit-content;
+  aspect-ratio: 16/9;
+  height: 340px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-left: calc(-620px * var(--i, 0));
+  transition: margin-left 0.2s;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper button {
+  min-width: 40px;
+  width: 40px;
+  height: 40px;
+  font-size: 24px;
+  border-radius: 20px;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000000;
+  position: absolute;
+  top: 0;
+  backdrop-filter: blur(10px);
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper button:disabled {
+  opacity: 1;
+  filter: brightness(0.6);
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper button.icon-arrow-left {
+  left: 40px;
+  top: 150px;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper button.icon-arrow-right {
+  right: 40px;
+  top: 150px;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper img {
+  width: 600px;
+  height: 340px;
+  object-fit: contain;
+  background-color: var(--glass-ultralight);
+  border-radius: 10px;
+}
+
+#AppStore div.page.viewStoreItem div.screenshots-wrapper img.selected {
+  z-index: 100000;
+}
