--- a/src/css/apps/components/openwith.css
+++ b/src/css/apps/components/openwith.css
@@ -52,6 +52,7 @@
   width: 100%;
   padding: 10px;
   background-color: transparent;
+  outline: none;
 }
 
 #OpenWith div.body > div.top div.options button.option p {
