--- a/src/css/window/titlebar.css
+++ b/src/css/window/titlebar.css
@@ -3,6 +3,11 @@ div.window:not(.focused) > div.body div.titlebar.custom {
   opacity: 0.5;
 }
 
+div.window > div.titlebar button,
+div.window > div.body div.titlebar.custom button {
+  outline: none !important;
+}
+
 div.window > div.titlebar,
 div.window > div.body div.titlebar.custom {
   display: flex;
