--- a/src/css/apps/components/shortcutproperties.css
+++ b/src/css/apps/components/shortcutproperties.css
@@ -61,6 +61,10 @@
   width: 100%;
 }
 
+#ShortcutProperties > div.body div.info-block div.row {
+  gap: 0;
+}
+
 #ShortcutProperties > div.body div.info-block + div.info-block {
   margin-top: 20px;
 }
@@ -76,6 +80,7 @@
 #ShortcutProperties > div.body div.info-block div.points-to p.value {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 
 #ShortcutProperties > div.body div.info-block div.points-to p.value button {
@@ -85,6 +90,13 @@
   height: 16px;
   font-size: 16px;
   background-color: transparent;
+}
+#ShortcutProperties > div.body div.info-block div.type {
+  min-width: fit-content;
+}
+
+#ShortcutProperties > div.body div.info-block div.name {
+  flex-grow: 1;
 }
 
 #ShortcutProperties > div.body div.actions {
