--- a/src/css/apps/user/advsystemsettings.css
+++ b/src/css/apps/user/advsystemsettings.css
@@ -21,6 +21,7 @@
   padding: 0 8px;
   min-width: unset;
   background-color: var(--win-bg);
+  outline: none;
 }
 
 #AdvSystemSettings > div.body div.tabs button:hover {
