--- a/src/css/apps/user/appstore/installaction.css
+++ b/src/css/apps/user/appstore/installaction.css
@@ -79,6 +79,7 @@
   padding: 0 !important;
   width: 60px !important;
   min-width: unset;
+  outline: none;
 }
 
 #AppStore > div.body div.package-install-action > button:not(.lucide).compact div.content {
