--- a/src/css/apps/user/filemanager/addressbar.css
+++ b/src/css/apps/user/filemanager/addressbar.css
@@ -88,7 +88,7 @@
   min-width: unset;
 }
 
-#fileManager div.address-bar button:not(.suggested) {
+#fileManager div.address-bar button:not(.suggested):not(.lucide) {
   background-color: var(--button-bg);
 }
 
