--- a/src/css/apps/user/settings/overlay/userfont.css
+++ b/src/css/apps/user/settings/overlay/userfont.css
@@ -47,6 +47,7 @@
   background-color: transparent;
   font-family: var(--font);
   font-size: 16px;
+  outline: none;
 }
 #systemSettings #UserFont div.body div.options button span.lucide {
   font-size: 16px;
