--- a/src/css/apps/user/settings/sidebar.css
+++ b/src/css/apps/user/settings/sidebar.css
@@ -11,6 +11,7 @@
   padding: 5px 7px;
   margin-bottom: 5px;
   background-color: transparent;
+  outline: none;
 }
 
 #systemSettings div.sidebar button.page:hover {
@@ -46,6 +47,7 @@
   width: 100%;
   margin-bottom: 5px;
   background-color: transparent;
+  outline: none;
 }
 
 #systemSettings div.sidebar button.account-button.selected {
