--- a/src/css/main.css
+++ b/src/css/main.css
@@ -40,7 +40,7 @@ body {
   font-size: inherit;
   font-family: inherit;
   user-select: none;
-  outline: none !important;
+  outline: none;
   -webkit-user-drag: none !important;
 }
 
