Improve TotpAuthGui UX

--- a/src/css/apps/components/totpauthgui.css
+++ b/src/css/apps/components/totpauthgui.css
@@ -27,6 +27,17 @@
   padding: 0;
   text-align: center;
 }
+
+/* removes up and down arrows from inputs */
+#TotpAuthGui > div.body div.inputs input::-webkit-outer-spin-button,
+#TotpAuthGui > div.body div.inputs input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+#TotpAuthGui > div.body div.inputs input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
 #TotpAuthGui > div.body h1 {
   font-size: 18px;
 }
