--- a/src/css/apps/core/initialsetup.css
+++ b/src/css/apps/core/initialsetup.css
@@ -39,7 +39,7 @@
   height: 450px;
   background-color: var(--glass-bg);
   border: var(--win-border);
-  border-radius: 10px;
+  border-radius: var(--win-border-rad);
   backdrop-filter: blur(var(--blur));
   scale: 0.9;
   opacity: 0;
@@ -91,6 +91,10 @@
   transition: background-color 0.2s, opacity 0.2s, filter 0.2s, scale 0.2s;
 }
 
+#initialSetupWizard div.actions button {
+  outline: var(--button-glass-bg) 1px solid;
+  outline-offset: -1px;
+}
 #initialSetupWizard div.actions button:disabled {
   opacity: 0.5;
 }
