--- a/src/css/apps/user/filemanager.css
+++ b/src/css/apps/user/filemanager.css
@@ -2,6 +2,7 @@
 @import url("./filemanager/addressbar.css");
 @import url("./filemanager/directoryviewer.css");
 @import url("./filemanager/virtual/myarcos.css");
+@import url("./filemanager/virtual/recyclebin.css");
 @import url("./filemanager/splash.css");
 @import url("./filemanager/bottom.css");
 
@@ -38,4 +39,12 @@
   width: 700px;
   height: 520px;
   /* resize: none; */
+}
+
+#fileManager div.virtual-page {
+  height: calc(100% - 30px - 0px);
+  overflow-y: scroll;
+  padding: 15px;
+  position: relative;
+  transition: height 0.3s;
 }
