Add recycling to AdvSysSet

--- a/src/css/apps/user/advsystemsettings.css
+++ b/src/css/apps/user/advsystemsettings.css
@@ -1,3 +1,4 @@
+@import url("./advsystemsettings/recycling.css");
 @import url("./advsystemsettings/startup.css");
 @import url("./advsystemsettings/dispatch.css");
 
