--- a/src/css/apps/user/mediaplayer/queue.css
+++ b/src/css/apps/user/mediaplayer/queue.css
@@ -62,6 +62,7 @@
   margin-left: auto;
   background-color: transparent;
   min-width: 24px;
+  outline: none;
 }
 
 #MediaPlayer > div.body > div.queue > div:not(:hover) button.lucide {
