CSS improvements in ArcShell

--- a/src/css/apps/components/shell/actioncenter/quicksettings.css
+++ b/src/css/apps/components/shell/actioncenter/quicksettings.css
@@ -46,7 +46,7 @@ div.shell div.actioncenter div.quick-settings div.sep {
 
 div.shell div.actioncenter div.quick-settings button.active {
   background-color: var(--accent-light);
-  color: var(--accent-darkest);
+  color: var(--accent-suggested-fg);
 }
 
 div.shell div.actioncenter div.quick-settings button.active:hover {
