--- a/src/css/state/arcterm.css
+++ b/src/css/state/arcterm.css
@@ -4,5 +4,9 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  padding: 5px;
+  padding: 7px;
+}
+
+#arcTermMode * {
+  font-family: "Fira Code";
 }
