Intermediary 7.0.5: text align in start menu right pane

--- a/src/css/apps/components/shell/startmenu/folders.css
+++ b/src/css/apps/components/shell/startmenu/folders.css
@@ -39,6 +39,7 @@ div.shell div.startmenu div.top div.folders button span {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  text-align: left;
 }
 
 div.shell div.startmenu div.top div.folders {
