--- a/src/css/window.css
+++ b/src/css/window.css
@@ -11,6 +11,7 @@
 @import url("./window/scrollbars.css");
 @import url("./window/snapping.css");
 @import url("./window/proto.css");
+@import url("./window/userlink.css");
 
 div.window:not(.core) {
   position: absolute;
