--- a/src/css/apps/components/messagecomposer.css
+++ b/src/css/apps/components/messagecomposer.css
@@ -67,6 +67,7 @@
   padding: 0;
   font-size: 16px;
   background-color: transparent;
+  outline: none;
 }
 
 #MessageComposer > div.body div.fields > div.field.to input {
