--- a/src/css/apps/user/appstore/page/home.css
+++ b/src/css/apps/user/appstore/page/home.css
@@ -19,6 +19,7 @@
   text-align: left;
   box-shadow: var(--secondary-box-shadow);
   border: var(--button-glass-bg) 1px solid;
+  margin-bottom: 20px;
 }
 
 #AppStore div.page.home div.hero img.banner {
@@ -78,4 +79,79 @@
 
 #AppStore div.page.home div.hero p.description {
   max-width: calc(100% - 90px);
+}
+
+#AppStore div.page.home div.popular {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  max-width: 600px;
+}
+#AppStore div.page.home div.popular button.item {
+  position: relative;
+  overflow: hidden;
+  width: calc(100% - 10px);
+  height: 150px;
+  text-align: left;
+  display: flex;
+  align-items: end;
+  padding: 10px;
+  box-shadow: var(--secondary-box-shadow);
+  outline: none;
+  border: var(--button-glass-bg) 1px solid;
+}
+
+#AppStore div.page.home div.popular button.item div.content {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: end;
+  padding: 10px;
+  background: linear-gradient(to top right, var(--win-bg) 0%, transparent 100%);
+}
+#AppStore div.page.home div.popular button.item div.content img {
+  width: 32px;
+  height: 32px;
+  object-fit: cover;
+  border-radius: 5px;
+  margin-bottom: 5px;
+}
+#AppStore div.page.home div.popular button.item div.content h1 {
+  font-size: 16px;
+}
+
+#AppStore div.page.home div.popular button.item div.content p.description {
+  margin-bottom: 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 100%;
+}
+
+#AppStore div.page.home div.popular button.item div.content p.stats {
+  opacity: 0.7;
+  font-size: 12px;
+}
+
+#AppStore div.page.home div.popular button.item img.backdrop {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: cover;
+  z-index: 0;
+  opacity: 0.3;
+}
+
+#AppStore div.page.home div.popular button.item img.backdrop.fallback {
+  filter: blur(20px);
+  opacity: 0.5;
 }
