--- a/src/css/apps/components/fsprogress/bottom.css
+++ b/src/css/apps/components/fsprogress/bottom.css
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 10px;
   height: 51px;
-  background-color: var(--button-bg);
+  background-color: var(--button-glass-bg);
   border-top: var(--win-border);
   padding: 0 10px;
   padding-left: 20px;
@@ -12,25 +12,9 @@
   margin-top: auto !important;
 }
 
-#FsProgress div.bottom div.status {
-  display: flex;
-  gap: 10px;
-  margin-left: auto;
-}
-
-#FsProgress div.bottom div.status span {
-  font-size: 20px;
-  opacity: 0.2;
-  transition: none;
-}
-
-#FsProgress div.bottom div.status span.active {
-  color: var(--accent);
-  opacity: 1;
-}
-
 #FsProgress div.bottom button {
   margin: 0;
+  margin-left: auto;
   height: 30px;
 }
 
