--- a/src/css/apps/user/filemanager/directoryviewer.css
+++ b/src/css/apps/user/filemanager/directoryviewer.css
@@ -21,6 +21,7 @@
 #fileManager div.directory-viewer button div.segment.icon img {
   width: 24px;
   height: 24px;
+  border-radius: 8%;
 }
 
 #fileManager div.directory-viewer button div.segment.icon span {
