--- a/src/css/apps/user/filemanager/directoryviewer/grid.css
+++ b/src/css/apps/user/filemanager/directoryviewer/grid.css
@@ -39,6 +39,7 @@
   background-color: transparent;
   min-height: 26px;
   outline: none;
+  min-width: unset;
 }
 
 #fileManager div.directory-viewer.grid button div.segment.icon img {
