--- a/src/css/apps/user/filemanager/directoryviewer/thumbnail.css
+++ b/src/css/apps/user/filemanager/directoryviewer/thumbnail.css
@@ -36,6 +36,7 @@
   gap: 5px;
   margin: 2.5px;
   margin-bottom: 5px;
+  min-width: unset;
 }
 
 #fileManager div.directory-viewer.thumbnail button div.segment.icon img {
