Some fancy animations

--- a/src/css/apps/components/shell/taskbar.css
+++ b/src/css/apps/components/shell/taskbar.css
@@ -16,6 +16,9 @@ div.shell div.taskbar {
   backdrop-filter: blur(var(--blur));
   -webkit-backdrop-filter: blur(var(--blur));
   transition: translate 0.3s;
+  translate: 0 70px;
+  animation: arcShell_taskbar_appear 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) forwards;
+  animation-delay: 1000ms;
 }
 
 div.shell.docked div.taskbar.shell-colored::before {
@@ -217,4 +220,13 @@ div.shell div.taskbar div.pinned-apps > button + button {
 
 #arcShell div.taskbar div.tray-icons > div.icon > div.popup:not(.visible) * {
   pointer-events: none !important;
+}
+
+@keyframes arcShell_taskbar_appear {
+  0% {
+    translate: 0 70px;
+  }
+  100% {
+    translate: 0;
+  }
 }
