--- a/src/css/apps/components/wallpaper.css
+++ b/src/css/apps/components/wallpaper.css
@@ -61,6 +61,9 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   pointer-events: initial !important;
   translate: none !important;
   --user-font: "Nunito Sans" !important;
+  animation: wallpaper_desktopIcon_appear 0.1s forwards;
+  animation-delay: calc(var(--i) * 10ms);
+  opacity: 0;
 }
 
 #wallpaper div.desktop-icons div.ghost {
@@ -169,4 +172,18 @@ div.desktop-wallpaper > div.wallpaper:not(.show) {
   border: #fff2 var(--thickness) solid;
   border-top: var(--thickness) solid currentColor;
   box-shadow: var(--secondary-box-shadow);
+}
+
+@keyframes wallpaper_desktopIcon_appear {
+  0% {
+    opacity: 0;
+    pointer-events: none;
+  }
+  60% {
+    pointer-events: initial;
+  }
+  100% {
+    opacity: 1;
+    pointer-events: initial;
+  }
 }
